# mind-palace-notes

./: README.md
backend/: .gitignore  pyproject.toml
backend/app/: main.py
backend/app/auth/: models.py  routes.py  users.py
backend/app/core/: database.py
